# Linux-Setup

./: .bash_aliases  .bashrc  .complete-setup.nu  .gitconfig  .setup-completion.bash  .vimrc  LICENSE.md  README.md  auto-setup  compile  help.txt  manual-setup  neofetch_config  setup  setup-auto  setup.bash-completion  setup.sh  show_all_commits.py
Files/: .XCompose  .bash_aliases  .bashrc  .gitconfig  .ideavimrc  .pylintrc  .tern-config  .vimrc  cargo-config.toml  clippy.conf  coc-settings.json  init.evcxr  init.sage  init.vim  ipython_config.py  neofetch_config  plugins.lua  setup-help  setup_help  startup.jl  terminator-config  terminator_config
Files/UltiSnips/: julia.snippets  lisp.snippets  python.snippets
Files/nushell/: aliases.nu  commands.nu  completions.nu  config.nu  env.nu  vars.nu
desktop-files/: inria-coqide.desktop  obsidian-obsidian.desktop  portswigger-burpsuite.desktop  zotero-zotero.desktop
desktop-files/icons/burpsuite/: 128.xpm
desktop-files/icons/coqide/: 128.xpm
desktop-files/icons/obsidian/: 128.xpm
desktop-files/icons/zotero/: 128.xpm
dockerfiles/coq-interactive/: Dockerfile
dockerfiles/coq-interactive-with-libraries/: Dockerfile
history-cleaner/: Cargo.toml
history-cleaner/src/: main.rs
